# ts2mp4

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  ts2mp4.py  ts2mp4.sh
.agent/: AGENTS.md
.agent/rules/: specify-rules.md
.agent/skills/business-analyst/: SKILL.md
.specify/memory/: constitution.md
_docs/: business_analysis.md  main_prompt.md
memory_bank/: wf_20260317_avidemux_converter.md
specs/001-ts-mp4-converter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ts-mp4-converter/checklists/: requirements.md
specs/001-ts-mp4-converter/contracts/: ui-contracts.md
specs/002-avidemux-converter-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-avidemux-converter-engine/checklists/: requirements.md
src/: __init__.py  app.py  main.py
src/core/: avidemux_converter.py  converter.py  converter_factory.py  file_validator.py  progress_parser.py  queue_manager.py
src/models/: app_settings.py  conversion_job.py
src/ui/: dialogs.py  drop_zone.py  file_list_widget.py  main_window.py  progress_widget.py
src/utils/: logger.py  paths.py
src/workers/: __init__.py  conversion_worker.py
tests/: conftest.py
tests/integration/: test_conversion_e2e.py
tests/sample_files/: README.md
tests/unit/: test_app_settings.py  test_avidemux_converter.py  test_conversion_job.py  test_converter.py  test_converter_factory.py  test_file_validator.py  test_progress_parser.py  test_queue_manager.py
